// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Redundancy pay calculator ResultsBox Component renders the component with provided props 1`] = `
<div
  class="h-full mb-4 lg:mb-0"
>
  <div
    class="relative min-h-[95px] p-6 rounded-bl-3xl before:content-[""] before:block before:h-[80px] before:w-[8px] before:absolute before:left-0 before:top-0 before:rounded-bl-[8px] bg-gray-100 before:bg-teal-700 h-full pt-2"
    data-testid="callout-information"
  >
    <h3
      class="text-2xl md:text-4xl text-gray-800 font-bold mb-4"
    >
      How long will your money last?
    </h3>
    <p>
      Based on your
       
      <b>
        £
        15,000
         
        yearly
      </b>
       
      salary, your 
      <b>
        £
        1,587
      </b>
       redundancy money is roughly equivalent to 
      <b>
        1.3
      </b>
       months of salary.
    </p>
  </div>
</div>
`;

exports[`Redundancy pay calculator ResultsBox Component renders the component with provided props 2`] = `
<div
  class="h-full mb-4 lg:mb-0"
>
  <div
    class="relative min-h-[95px] p-6 rounded-bl-3xl before:content-[""] before:block before:h-[80px] before:w-[8px] before:absolute before:left-0 before:top-0 before:rounded-bl-[8px] bg-gray-100 before:bg-teal-700 h-full pt-2"
    data-testid="callout-information"
  >
    <h3
      class="text-2xl md:text-4xl text-gray-800 font-bold mb-4"
    >
      How long will your money last?
    </h3>
    <p>
      Based on your
       
      <b>
        £
        32,650
         
        yearly
      </b>
       
      salary, your 
      <b>
        £
        5,651
      </b>
       redundancy money is roughly equivalent to 
      <b>
        2.4
      </b>
       months of salary.
    </p>
  </div>
</div>
`;

exports[`Redundancy pay calculator ResultsBox Component renders the component with provided props 3`] = `
<div
  class="h-full mb-4 lg:mb-0"
>
  <div
    class="relative min-h-[95px] p-6 rounded-bl-3xl before:content-[""] before:block before:h-[80px] before:w-[8px] before:absolute before:left-0 before:top-0 before:rounded-bl-[8px] bg-gray-100 before:bg-teal-700 h-full pt-2"
    data-testid="callout-information"
  >
    <h3
      class="text-2xl md:text-4xl text-gray-800 font-bold mb-4"
    >
      How long will your money last?
    </h3>
    <p>
      Based on your
       
      <b>
        £
        798
         
        weekly
      </b>
       
      salary, your 
      <b>
        £
        5,250
      </b>
       redundancy money is roughly equivalent to 
      <b>
        1.8
      </b>
       months of salary.
    </p>
  </div>
</div>
`;

exports[`Redundancy pay calculator ResultsBox Component renders the component with provided props 4`] = `
<div
  class="h-full mb-4 lg:mb-0"
>
  <div
    class="relative min-h-[95px] p-6 rounded-bl-3xl before:content-[""] before:block before:h-[80px] before:w-[8px] before:absolute before:left-0 before:top-0 before:rounded-bl-[8px] bg-gray-100 before:bg-teal-700 h-full pt-2"
    data-testid="callout-information"
  >
    <h3
      class="text-2xl md:text-4xl text-gray-800 font-bold mb-4"
    >
      How long will your money last?
    </h3>
    <p>
      Based on your
       
      <b>
        £
        2,640
         
        monthly
      </b>
       
      salary, your 
      <b>
        £
        2,742
      </b>
       redundancy money is roughly equivalent to 
      <b>
        1.2
      </b>
       months of salary.
    </p>
  </div>
</div>
`;

exports[`Redundancy pay calculator ResultsBox Component renders the component with provided props 5`] = `
<div
  class="h-full mb-4 lg:mb-0"
>
  <div
    class="relative min-h-[95px] p-6 rounded-bl-3xl before:content-[""] before:block before:h-[80px] before:w-[8px] before:absolute before:left-0 before:top-0 before:rounded-bl-[8px] bg-gray-100 before:bg-teal-700 h-full pt-2"
    data-testid="callout-information"
  >
    <h3
      class="text-2xl md:text-4xl text-gray-800 font-bold mb-4"
    >
      How long will your money last?
    </h3>
    <p>
      Based on your
       
      <b>
        £
        23,000
         
        yearly
      </b>
       
      salary, your 
      <b>
        £
        1,327
      </b>
       redundancy money is roughly equivalent to 
      <b>
        0.8
      </b>
       months of salary.
    </p>
  </div>
</div>
`;

exports[`Redundancy pay calculator ResultsBox Component renders the component with provided props 6`] = `
<div
  class="h-full mb-4 lg:mb-0"
>
  <div
    class="relative min-h-[95px] p-6 rounded-bl-3xl before:content-[""] before:block before:h-[80px] before:w-[8px] before:absolute before:left-0 before:top-0 before:rounded-bl-[8px] bg-gray-100 before:bg-teal-700 h-full pt-2"
    data-testid="callout-information"
  >
    <h3
      class="text-2xl md:text-4xl text-gray-800 font-bold mb-4"
    >
      How long will your money last?
    </h3>
    <p>
      Based on your
       
      <b>
        £
        91,000
         
        yearly
      </b>
       
      salary, your 
      <b>
        £
        3,150
      </b>
       redundancy money is roughly equivalent to 
      <b>
        0.6
      </b>
       months of salary.
    </p>
  </div>
</div>
`;

exports[`Redundancy pay calculator ResultsBox Component renders the component with provided props 7`] = `
<div
  class="h-full mb-4 lg:mb-0"
>
  <div
    class="relative min-h-[95px] p-6 rounded-bl-3xl before:content-[""] before:block before:h-[80px] before:w-[8px] before:absolute before:left-0 before:top-0 before:rounded-bl-[8px] bg-gray-100 before:bg-teal-700 h-full pt-2"
    data-testid="callout-information"
  >
    <h3
      class="text-2xl md:text-4xl text-gray-800 font-bold mb-4"
    >
      How long will your money last?
    </h3>
    <p>
      Based on your
       
      <b>
        £
        154,000
         
        yearly
      </b>
       
      salary, your 
      <b>
        £
        0
      </b>
       redundancy money is roughly equivalent to 
      <b>
        0.0
      </b>
       months of salary.
    </p>
  </div>
</div>
`;

exports[`Redundancy pay calculator ResultsBox Component renders the component with provided props 8`] = `
<div
  class="h-full mb-4 lg:mb-0"
>
  <div
    class="relative min-h-[95px] p-6 rounded-bl-3xl before:content-[""] before:block before:h-[80px] before:w-[8px] before:absolute before:left-0 before:top-0 before:rounded-bl-[8px] bg-gray-100 before:bg-teal-700 h-full pt-2"
    data-testid="callout-information"
  >
    <h3
      class="text-2xl md:text-4xl text-gray-800 font-bold mb-4"
    >
      How long will your money last?
    </h3>
    <p>
      Based on your
       
      <b>
        £
        78,514
         
        yearly
      </b>
       
      salary, your 
      <b>
        £
        14,000
      </b>
       redundancy money is roughly equivalent to 
      <b>
        2.8
      </b>
       months of salary.
    </p>
  </div>
</div>
`;

exports[`Redundancy pay calculator ResultsBox Component renders the component with provided props 9`] = `
<div
  class="h-full mb-4 lg:mb-0"
>
  <div
    class="relative min-h-[95px] p-6 rounded-bl-3xl before:content-[""] before:block before:h-[80px] before:w-[8px] before:absolute before:left-0 before:top-0 before:rounded-bl-[8px] bg-gray-100 before:bg-teal-700 h-full pt-2"
    data-testid="callout-information"
  >
    <h3
      class="text-2xl md:text-4xl text-gray-800 font-bold mb-4"
    >
      How long will your money last?
    </h3>
    <p>
      Based on your
       
      <b>
        £
        41,500
         
        yearly
      </b>
       
      salary, your 
      <b>
        £
        3,645
      </b>
       redundancy money is roughly equivalent to 
      <b>
        1.2
      </b>
       months of salary.
    </p>
  </div>
</div>
`;

exports[`Redundancy pay calculator ResultsBox Component renders the component with provided props 10`] = `
<div
  class="h-full mb-4 lg:mb-0"
>
  <div
    class="relative min-h-[95px] p-6 rounded-bl-3xl before:content-[""] before:block before:h-[80px] before:w-[8px] before:absolute before:left-0 before:top-0 before:rounded-bl-[8px] bg-gray-100 before:bg-teal-700 h-full pt-2"
    data-testid="callout-information"
  >
    <h3
      class="text-2xl md:text-4xl text-gray-800 font-bold mb-4"
    >
      How long will your money last?
    </h3>
    <p>
      Based on your
       
      <b>
        £
        52,943
         
        yearly
      </b>
       
      salary, your 
      <b>
        £
        18,900
      </b>
       redundancy money is roughly equivalent to 
      <b>
        5.1
      </b>
       months of salary.
    </p>
  </div>
</div>
`;

exports[`Redundancy pay calculator ResultsBox Component renders the component with provided props 11`] = `
<div
  class="h-full mb-4 lg:mb-0"
>
  <div
    class="relative min-h-[95px] p-6 rounded-bl-3xl before:content-[""] before:block before:h-[80px] before:w-[8px] before:absolute before:left-0 before:top-0 before:rounded-bl-[8px] bg-gray-100 before:bg-teal-700 h-full pt-2"
    data-testid="callout-information"
  >
    <h3
      class="text-2xl md:text-4xl text-gray-800 font-bold mb-4"
    >
      How long will your money last?
    </h3>
    <p>
      Based on your
       
      <b>
        £
        154,000
         
        yearly
      </b>
       
      salary, your 
      <b>
        £
        0
      </b>
       redundancy money is roughly equivalent to 
      <b>
        0.0
      </b>
       months of salary.
    </p>
  </div>
</div>
`;
